; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/sjson/extr_jsonsl.c_jsonsl_new.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/sjson/extr_jsonsl.c_jsonsl_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jsonsl_st = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.jsonsl_st* @jsonsl_new(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.jsonsl_st*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @jsonsl_get_size(i32 %4)
  %6 = call i64 @calloc(i32 1, i32 %5)
  %7 = inttoptr i64 %6 to %struct.jsonsl_st*
  store %struct.jsonsl_st* %7, %struct.jsonsl_st** %3, align 8
  %8 = load %struct.jsonsl_st*, %struct.jsonsl_st** %3, align 8
  %9 = icmp ne %struct.jsonsl_st* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load %struct.jsonsl_st*, %struct.jsonsl_st** %3, align 8
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @jsonsl_init(%struct.jsonsl_st* %11, i32 %12)
  br label %14

14:                                               ; preds = %10, %1
  %15 = load %struct.jsonsl_st*, %struct.jsonsl_st** %3, align 8
  ret %struct.jsonsl_st* %15
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @jsonsl_get_size(i32) #1

declare dso_local i32 @jsonsl_init(%struct.jsonsl_st*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
